# Python-Course-2026-Team1

archive-processor-api/: .env.example  .gitignore  Dockerfile  README.Docker.md  compose.yaml  docker-compose.yml  pyproject.toml
archive-processor-api/app/: main.py
archive-processor-api/app/api/: endpoints.py  indexing.py
archive-processor-api/app/core/: config.py
archive-processor-api/app/db/: models.py  session.py
archive-processor-api/app/middleware/: exception_handler.py
archive-processor-api/app/schemas/: archive.py  indexing.py
archive-processor-api/app/services/: archive_processing.py  extractor.py  indexing.py  storage.py  validation.py
archive-processor-api/app/worker/: main.py
mini-document-analyzer/: .gitignore  Dockerfile  README.md  cli.py  compose.yaml  exporter.py  main.py  pyproject.toml
mini-document-analyzer/analyzer/: __init__.py  statistics.py  text_reader.py  tokenizer.py
mini-document-analyzer/tests/: pytest.ini  test_analyzer.py  test_cli.py  test_exporter.py
