[project]
name = "archive-processor-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksei"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "sqlalchemy>=2.0.27",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"